# whiteout

./: .gitignore  README.md  bun.lockb  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.run/: Start server.run.xml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Hello.vue
src/lib/: ffi.ts
