[package]
name = "whiteout"
version = "0.0.0"
description = "Literally a solid white window that is on top of all other windows"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "process-exit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
